# IBM-I-mcp-gateway

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: TROUBLESHOOTING.md
scripts/: debug_connect.py
src/ibmi_gateway/: __init__.py  config.py  connection.py  security.py  server.py
tests/: test_security.py
